<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@drawable/backgroundhome"
    tools:context=".Home">

    <ImageButton
        android:id="@+id/playButton"

        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play_button"
        android:onClick="gotoGame"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/winsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/playnow" />

    <ImageButton
        android:id="@+id/winsButton"
        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/win_button"
        android:onClick="gotoWins"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/shopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mywins" />

    <ImageButton
        android:id="@+id/shopButton"
        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shop_button"
        android:onClick="gotoShop"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/infoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/giftshop" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="107dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/info_button"
        android:onClick="gotoInfo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/appinfo" />

    <ImageView
        android:id="@+id/questionmark"
        android:layout_width="84dp"
        android:layout_height="77dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        android:onClick="howtoplayscreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/question" />

    <ImageView
        android:id="@+id/howtoplay"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="107dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/howtoplay" />

</android.support.constraint.ConstraintLayout>