<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plainback1920"
    tools:context=".Gifts"
    tools:layout_editor_absoluteY="25dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="267dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/giftlogo" />


            <LinearLayout
                android:id="@+id/container2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/fivehundred" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/lepta"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/two" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/social"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/seven" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/streaming"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/efood" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/efood"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/odeon" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:scrollbars="vertical"
                    android:text="@string/odeon"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bluestar" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/bluestar"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mikel" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/mikel"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/simply" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/burger"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="184dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="7dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dominos" />


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/pizza"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    android:typeface="monospace" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>